[package]
name = "learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tui = "0.18"
crossterm = "0.23"
cursive = "0.15.0"
terminal_size = "0.1.17"