[package]
name = "learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "^0.8"
crossterm = "0.24.0"
sysinfo = "0.24.6"
chrono = "0.4"